# similar

./: .gitignore  CMakeLists.txt  SHA1.cpp  SHA1.h  async_manager.cpp  async_manager.hpp  directory.cpp  directory.hpp  directory_lister.hpp  directory_lister_unix.cpp  directory_unix.cpp  directory_walker.cpp  directory_walker.hpp  hasher.cpp  hasher.hpp  main.cpp  match_map.cpp  match_map.hpp  progress.cpp  progress.hpp  smart_pointer.hpp  spanhash.cpp  spanhash.hpp
portage/dev-util/similar/: similar-9999.ebuild
